# openid4v

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
examples/: __init__.py  birth_certificate.json  federation.py  operation.py  sequence.py  wallet_setup.py
examples/entities/: README.md  display_entity.py  entities.json  entity.py  exec.py  kill_all.sh  setup.py  start_all.sh  test_config.py  trust_anchor_local.json  trust_anchors.json  wallet.py  x_entities.json
examples/members/: diploma.json  intermediate.py  pid.py  qeea.py  rp.py  ta.py  wallet.py  wallet_provider.py
examples/stand_alone/: federation.py  operation.py  sequence.py  wallet_setup.py
script/: wallet_instance_attestation_request.py
src/oidc4vc/: message.py
src/oidc4vci/: __init__.py  claims.py  message.py
src/openid4v/: __init__.py  message.py  user_info.py  utils.py  (+1 more)
tests/: __init__.py  test_01_message.py  test_02_hardware_signature.py  test_02_session_manager_load.py  test_03_init_and_reg.py  test_04_attestation_issuance.py  test_04_wia.py  test_05_authz_detail_matching.py  test_05_credential_issuer.py  test_05_endpoint.py  test_10_sequence.py  test_10_wallet_provider.py  test_1_message.py  test_20_pid_eaa_handler.py  test_20_pid_eaa_server.py  test_21_pid_eaa_server_simplified.py  test_21_wallet_provider.py  test_25_client_auth_attestation.py  test_30_app_attestation.py  test_30_credential_constructor.py  test_30_verifier.py  test_31_init_and_reg.py  test_35_credential_issuer.py  test_5_endpoint.py  x_test_35_credential_issuer.py  xxtest_30_verifier.py
(+94 files in other folders)
